force-app/main/default/objects/Pricebook2/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <description>Validity period end date of the price book</description>
    <inlineHelpText>Validity period end date of the price book</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>