force-app/main/default/objects/Pricebook2/fields/FollowUpPriceBook__c.field-meta.xml
<CustomField>
    <fullName>FollowUpPriceBook__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Follow Up Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Price Books</relationshipLabel>
    <relationshipName>Price_Books</relationshipName>
    <type>Lookup</type>
</CustomField>