force-app/main/default/objects/Pricebook2/fields/IndexationPercentage__c.field-meta.xml
<CustomField>
    <fullName>IndexationPercentage__c</fullName>
    <label>Indexation Percentage</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>