force-app/main/default/objects/Pricebook2/fields/MarketSegment__c.field-meta.xml
<CustomField>
    <fullName>MarketSegment__c</fullName>
    <label>Market Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>MarketSegment</valueSetName>
    </valueSet>
</CustomField>