force-app/main/default/objects/Pricebook2/fields/PricebookType__c.field-meta.xml
<CustomField>
    <fullName>PricebookType__c</fullName>
    <label>Pricebook Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PrimaryEducation</fullName>
                <label>Primary Education</label>
            </value>
            <value>
                <fullName>SecondaryEducation</fullName>
                <label>Secondary Education</label>
            </value>
            <value>
                <fullName>VocationalEducation</fullName>
                <label>Vocational Education</label>
            </value>
            <value>
                <fullName>HigherEducation</fullName>
                <label>Higher Education</label>
            </value>
            <value>
                <fullName>AllEducation</fullName>
                <label>All Education</label>
            </value>
            <value>
                <fullName>Professional</fullName>
            </value>
            <value>
                <fullName>SIMSLMS</fullName>
                <label>SIMS / LMS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>