force-app/main/default/objects/Pricebook2/fields/SalesSeason__c.field-meta.xml
<CustomField>
    <fullName>SalesSeason__c</fullName>
    <label>Sales Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2019-2020</fullName>
            </value>
            <value>
                <fullName>2020-2021</fullName>
            </value>
            <value>
                <fullName>2021-2022</fullName>
            </value>
            <value>
                <fullName>2022-2023</fullName>
            </value>
            <value>
                <fullName>2023-2024</fullName>
            </value>
            <value>
                <fullName>2024-2025</fullName>
            </value>
            <value>
                <fullName>2025-2026</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>