force-app/main/default/objects/Pricebook2/fields/ServiceorSales__c.field-meta.xml
<CustomField>
    <fullName>ServiceorSales__c</fullName>
    <label>Service or Sales</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SalesOrService</valueSetName>
    </valueSet>
</CustomField>