force-app/main/default/objects/Pricebook2/fields/ShippingComplete__c.field-meta.xml
<CustomField>
    <fullName>ShippingComplete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shipping Complete</label>
    <type>Checkbox</type>
</CustomField>