force-app/main/default/objects/Pricebook2/fields/SoldInSubSegment__c.field-meta.xml
<CustomField>
    <fullName>SoldInSubSegment__c</fullName>
    <label>Sold in Sub Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SoldInSubSegment</valueSetName>
    </valueSet>
</CustomField>