force-app/main/default/objects/Pricebook2/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <description>Validity period start date of the price book</description>
    <inlineHelpText>Validity period start date of the price book</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>