force-app/main/default/objects/Pricebook2/validationRules/ProfessionalMustHaveIndexationRate.validationRule-meta.xml
<ValidationRule>
    <fullName>ProfessionalMustHaveIndexationRate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  CONTAINS(Name, &apos;Prof&apos;),  ISNULL(IndexationPercentage__c)  )</errorConditionFormula>
    <errorMessage>Professional Pricebooks must have an Indexation rate</errorMessage>
</ValidationRule>