force-app/main/default/objects/Pricebook2/validationRules/ZorgMustHaveIndexationRate.validationRule-meta.xml
<ValidationRule>
    <fullName>ZorgMustHaveIndexationRate</fullName>
    <active>true</active>
    <errorConditionFormula>AND(  CONTAINS(Name, &apos;Zorg&apos;),  ISNULL(IndexationPercentage__c)  )</errorConditionFormula>
    <errorMessage>Zorg Pricebooks must have an Indexation rate</errorMessage>
</ValidationRule>