force-app/main/default/objects/Pricebook2/listViews/All_Price_Books.listView-meta.xml
<ListView>
    <fullName>All_Price_Books</fullName>
    <columns>PRICEBOOK2.NAME</columns>
    <columns>FollowUpPriceBook__c</columns>
    <columns>Subsidiary__c</columns>
    <columns>PricebookType__c</columns>
    <columns>PricingMethod__c</columns>
    <columns>StartDate__c</columns>
    <columns>EndDate__c</columns>
    <columns>PRICEBOOK2.IS_ACTIVE</columns>
    <columns>PRICEBOOK2.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Price Books</label>
</ListView>